--- a/app/components/login/login.component.css
+++ b/app/components/login/login.component.css
@@ -2,6 +2,7 @@
 	max-width: 400px;
 	margin: auto;
 }
+
 .form-control {
 	display: block;
 	width: 100%;
@@ -14,53 +15,62 @@
 	background-image: none;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+
 .login_content {
 	margin: 0 auto;
 	padding: 25px 0 0;
 	position: relative;
 	text-align: center;
 	text-shadow: 0 1px 0 #fff;
-	min-width: 280px; }
+	min-width: 280px;
+}
 
 .login_content a,
 .login_content .btn-default:hover {
-	text-decoration: none; }
+	text-decoration: none;
+}
 
 .login_content a:hover {
-	text-decoration: underline; }
+	text-decoration: underline;
+}
 
 .login_content h1 {
 	font: normal 25px Helvetica, Arial, sans-serif;
 	letter-spacing: -0.05em;
 	line-height: 20px;
-	margin: 10px 0 30px; }
+	margin: 10px 0 30px;
+}
 
 .login_content h1:after {
 	background: #7e7e7e;
 	background: linear-gradient(left, #7e7e7e 0%, white 100%);
-	right: 0; }
+	right: 0;
+}
 
 .login_content h1:before {
 	background: #7e7e7e;
 	background: linear-gradient(right, #7e7e7e 0%, white 100%);
-	left: 0; }
+	left: 0;
+}
 
 .login_content h1:before, .login_content h1:after {
 	content: "";
 	height: 1px;
 	position: absolute;
 	top: 10px;
-	width: 20%; }
+	width: 20%;
+}
 
 .login_content form {
 	margin: 20px 0;
-	position: relative; }
+	position: relative;
+}
 
 .login_content form input[type="text"], .login_content form input[type="email"], .login_content form input[type="password"] {
 	border-radius: 3px;
@@ -70,7 +80,8 @@
 	border: 1px solid #c8c8c8;
 	color: #777;
 	margin: 0 0 20px;
-	width: 100%; }
+	width: 100%;
+}
 
 .login_content form input[type="text"]:focus, .login_content form input[type="email"]:focus, .login_content form input[type="password"]:focus {
 	-ms-box-shadow: 0 0 2px #ed1c24 inset;
@@ -78,4 +89,5 @@
 	box-shadow: 0 0 2px #A97AAD inset;
 	background-color: #fff;
 	border: 1px solid #A878AF;
-	outline: none; }
+	outline: none;
+}
