--- a/app/components/speaker/speaker.component.html
+++ b/app/components/speaker/speaker.component.html
@@ -1,7 +1,9 @@
 <div class="col-md-12 col-sm-12 col-xs-12">
 	<div class="x_panel" *ngIf="speakers">
 		<div class="x_title">
-			<h2>Default Example <small>Users</small></h2>
+			<h2>Default Example
+				<small>Users</small>
+			</h2>
 			<div class="clearfix"></div>
 		</div>
 		<div class="x_content">
