--- a/app/components/event/event.component.html
+++ b/app/components/event/event.component.html
@@ -1,9 +1,7 @@
 <div class="col-md-12 col-sm-12 col-xs-12">
 	<div class="x_panel" *ngIf="events">
 		<div class="x_title">
-			<h2>Default Example
-				<small>Users</small>
-			</h2>
+			<h2>Events table</h2>
 			<div class="clearfix"></div>
 		</div>
 		<div class="x_content">
